--- a/package.json
+++ b/package.json
@@ -12,17 +12,16 @@
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
-    "adm-zip": "^0.5.10",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "js-file-download": "^0.4.12",
+    "jszip": "^3.10.1",
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.5"
   },
   "devDependencies": {
-    "@types/adm-zip": "^0.5.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
